--- a/lojinha/carrinho.html
+++ b/lojinha/carrinho.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho - Entre Linhas e Botões</title>
+     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/carrinho.css">
+      <!-- CSS Personalizado -->
+    <link rel="stylesheet" href="css\carrinho.css">
+    
 </head>
 <body>
     <!-- Navbar -->
@@ -48,7 +51,7 @@
                 <div class="cart-item">
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://via.placeholder.com/300" alt="Produto 1">
+                            <img src="..\assets\conjunto_masc.jpg" alt="Produto 1">
                         </div>
                         <div class="col-9">
                             <h3>Conjunto Masculino</h3>
@@ -60,7 +63,7 @@
                 <div class="cart-item">
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://via.placeholder.com/300" alt="Produto 2">
+                            <img src="..\assets\vestido_femino_infantil.jpeg" alt="Produto 2">
                         </div>
                         <div class="col-9">
                             <h3>Vestido Feminino</h3>
