--- a/lojinha/login.html
+++ b/lojinha/login.html
@@ -6,41 +6,8 @@
     <title>Login - Entre Linhas e Botões</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- CSS Personalizado -->
-    <style>
-        body {
-            background-color: #fff8e1; /* Fundo amarelado claro */
-            font-family: 'Arial', sans-serif;
-        }
-        .navbar-custom {
-            background-color: #ffc107 !important; /* Amarelo vibrante */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .navbar-custom .navbar-brand, .navbar-custom .nav-link {
-            color: #333 !important; /* Texto escuro para contraste */
-        }
-        .navbar-custom .nav-link:hover {
-            color: #fff !important; /* Texto branco ao passar o mouse */
-        }
-        .login-container {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 100px;
-        }
-        .btn-google {
-            background-color: #db4437; /* Vermelho do Google */
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .btn-google:hover {
-            background-color: #c23321; /* Vermelho mais escuro */
-        }
-    </style>
+      <!-- CSS Personalizado -->
+    <link rel="stylesheet" href="css\login.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -93,6 +60,9 @@
                         <button type="submit" class="btn btn-custom btn-block">Entrar</button>
                         <div class="text-center mt-3">
                             <p>ou</p>
+                        </div>
+                        <button type="submit" class="btn btn-lab btn-block">Cadastrar</button>
+                        <div class="text-center mt-3">
                             <button class="btn btn-google btn-block">
                                 <i class="fab fa-google"></i> Entrar com Google
                             </button>
@@ -102,14 +72,12 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="footer-custom">
         <div class="container">
             <p>&copy; 2023 Entre Linhas e Botões. Todos os direitos reservados.</p>
         </div>
     </footer>
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Ícones do Font Awesome -->
