--- a/lojinha/login.html
+++ b/lojinha/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Entre Linhas e Botões</title>
+    <!-- Icone Inicial da pagina -->
+    <link rel="icon" href="..\assets\de-costura.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <!-- CSS Personalizado -->
@@ -78,9 +80,6 @@
             <p>&copy; 2023 Entre Linhas e Botões. Todos os direitos reservados.</p>
         </div>
     </footer>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Ícones do Font Awesome -->
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+     <script src="js/login.js"></script>
 </body>
 </html>
